# FarmaFLeet

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_APPLIED.md  Makefile  Pharmacy Codes.xlsx  README.md  STATUS.md  SYSTEM_IMPROVEMENTS_SUMMARY.md  Sales orders_639045087241734537.xlsx  accounts.xlsx  area kuwait 2026.xlsx  docker-compose.override.yml.example  docker-compose.yml  init_project.sh  package-lock.json  plan.md  user_credentials.xlsx  vercel.json  verify_analytics.py  verify_auth_suite.py  verify_drivers.py  verify_orders.py  walkthrough_step_1_3.md
backend/: .dockerignore  .env.example  .env.prod.local  .gcloudignore  DEPLOY_FORCE_v2  DEPLOY_TRIGGER  Dockerfile  Dockerfile.prod  alembic.ini  backend_logs.txt  backfill_payments.py  check_db_extensions.py  cleanup_drivers.py  create_test_driver.py  debug_data.py  debug_db.py  debug_import_local.py  debug_settings.txt  error_trace.txt  list_routes.py  list_users.py  login_result.txt  login_result_v2.txt  pyproject.toml  requirements.txt  seed_driver_raw_sql.py  seed_drivers.py  seed_excel.py  setup_warehouse.py  verify_deployment_data.py  verify_filters.py
backend/api/: index.py  requirements.txt
backend/app/: main.py
backend/migrations/: MIGRATIONS.md  env.py  script.py.mako
backend/scripts/: assign_test_orders.py  backfill_timestamps.py  backup_database.sh  check_db.py  check_driver.py  check_online_drivers.py  check_settings.py  check_users.py  create_db.py  create_schema.sql  create_superuser.py  create_tables.py  drop_alembic.py  enable_postgis.py  (+31 more)
(+458 files in other folders)
